# anomaly_detection_project

./: AnomalyDetector.h  AnomalyReport.h  CLI.cpp  CLI.h  CMakeLists.txt  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  MainTrain.cpp  Server.cpp  Server.h  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  TimeSeries.cpp  TimeSeries.h  anomaly_detection_util.cpp  anomaly_detection_util.h  commands.h  minCircle.cpp  minCircle.h  output.txt  save.cpp  series.csv  timeseries.cpp  timeseries.h
